--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import "reset.css";
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap");
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
 @import "friend.css";
+@import "friends.css";
+@import "find.css";
 
 * {
   box-sizing: border-box;
