--- a/css/chat.css
+++ b/css/chat.css
@@ -1,4 +1,5 @@
 .chat-screen {
+  /*background-color: red;*/
   background-image: url(../images/chartbg.png);
   min-height: 100vh;
   /*to give 100% to viewport(viewport is screen)*/
@@ -61,4 +62,60 @@
 
 .chat__write-column i {
   cursor: pointer;
+}
+
+.chat-screen .chat__messages {
+  border-top: 1px solid #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 20px;
+  padding-top: 30px;
+}
+
+.chat__messages .chat__timestamp {
+  background-color: rgb(237, 239, 241);
+  color: black;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 5px 15px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  /*text-transform: uppercase;*/
+}
+
+.message {
+  display: flex;
+  align-items: center;
+}
+
+.message .message__content {
+  width: 80%;
+}
+
+.incoming-message img {
+  width: 50px;
+  border-radius: 15px;
+  margin-right: 20px;
+}
+
+.incoming-message {
+  align-self: flex-start;
+  width: 80%;
+}
+
+.sent-message {
+  align-self: flex-end;
+  width: 65%;
+}
+
+.message .message__bubble {
+  padding: 10px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  /*text-transform: uppercase;*/
 }
