--- a/css/more.css
+++ b/css/more.css
@@ -1,4 +1,10 @@
-.more .more__btn-list,
+.more .more__btn-list {
+  margin: 30px 0px;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
 .more .more__suggestions-list {
   margin: 30px 0px;
   margin-left: 10px;
@@ -63,4 +69,12 @@
 
 .beer {
   padding: 0 3px;
+}
+
+.theme {
+  padding: 0 23px;
+}
+
+.account {
+  padding: 0 14px;
 }
