--- a/css/friend.css
+++ b/css/friend.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.friend .friends__list {
+  background-color: red;
+}
+
 .friend .friend__avatar {
   width: 50px;
   height: 50px;
