--- a/css/chat.css
+++ b/css/chat.css
@@ -1,13 +1,3 @@
-.header-wrapper {
-  position: fixed;
-  top: 0px;
-  padding-top: 10px;
-  width: 100%;
-  background-color: white;
-  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
-    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-}
-
 .chats-body {
   padding: 10px 0px;
   padding-top: 150px;
@@ -21,14 +11,16 @@
 .chats-body {
   /*background-color: red;*/
   background-image: url(../images/chartbg.png);
-  min-height: 110vh;
+  min-height: 105vh;
   /*to give 100% to viewport(viewport is screen)*/
 }
 
-.chat__write {
+.chat__write-container {
+  background-color: white;
+  border-top: 2px solid #f7f7f7;
+
   position: fixed;
-  bottom: 50px;
-  width: 80%;
+  bottom: 0%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,17 +29,47 @@
   right: 0;
   /*Perfectly centered by margin : 0 auto; and left:0; right:0;*/
 
-  background-color: #fcfcfc;
-  border-radius: 20px;
-  padding: 10px 20px;
-  /*border-radius: 20px;*/
-  /*box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.6);*/
-  /*box-shadow : horizontal vertical blur rgba()*/
-  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+  padding: 5px 10px;
+  /*box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
-
-  /*box-shadow referenced from https://stripe.com/ */
+*/
 }
+
+.chat__write {
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  margin: 0px 10px;
+  padding: 15px 20px;
+  width: 100%;
+  border: none;
+  font-size: 18px;
+}
+
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__write:focus {
+  outline: none;
+}
+
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.5s ease-in-out;
+  /*transition can be use if icon is next of input*/
+}
+
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
+}
+/* chat__icon will hide when I use(focus) class chat__write.*/
 
 .chat__write i {
   font-size: 22px;
@@ -66,9 +88,6 @@
 
 .chat__write-column:last-child i {
   padding: 0px 6px;
-}
-.chat__write-column input:focus {
-  outline: none;
 }
 
 .chat__write-column i {
