--- a/css/friend.css
+++ b/css/friend.css
@@ -32,6 +32,21 @@
   margin-right: 10px;
 }
 
+.friend__column .nav__badge {
+  margin-right: 20px;
+  margin-top: 0px;
+  width: 20px;
+  height: 20px;
+  font-size: 15px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #dc5d46;
+  border-radius: 50%;
+}
+
 .friend__content .friend__name {
   font-size: 20px;
   display: block;
@@ -52,7 +67,7 @@
 }
 
 .friend .chat__timestamp {
-  font-size: 13px;
+  font-size: 15px;
   opacity: 0.7;
 }
 
