--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,3 +1,13 @@
+.header-wrapper {
+  position: fixed;
+  top: 0px;
+  padding-top: 10px;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .status-bar {
   display: flex;
   top: 0px;
