--- a/css/chat.css
+++ b/css/chat.css
@@ -16,34 +16,22 @@
 }
 
 .chat__write-container {
-  background-color: white;
-  border-top: 2px solid #f7f7f7;
-
   position: fixed;
-  bottom: 0%;
+  bottom: 0px;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   margin: 0 auto;
-  left: 0;
-  right: 0;
+
   /*Perfectly centered by margin : 0 auto; and left:0; right:0;*/
 
-  padding: 5px 10px;
+  /*padding: 5px 23px;*/
   /*box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 */
-}
-
-.chat__write {
-  bottom: 0px;
-  width: 100%;
-  border-radius: 0;
-  margin: 0px 10px;
-  padding: 15px 20px;
-  width: 100%;
-  border: none;
-  font-size: 18px;
 }
 
 .chat__icon-left {
@@ -56,20 +44,62 @@
   right: 10px;
 }
 
+@keyframes float {
+  0% {
+    /*transform: translateY(-100px);*/
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  50% {
+    /*transform: translateY(-95px);*/
+    box-shadow: 0 30px 60px -50px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    /*transform: translateY(-100px);*/
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+}
+
+.chat__write {
+  margin: 0 auto;
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
+  border: none;
+  font-size: 18px;
+  transition: width 0.7s ease-in, border-radius 0.5s ease-in-out,
+    transform 0.5s ease-in-out;
+}
+
 .chat__write:focus {
   outline: none;
+  width: 80%;
+
+  transform: translateY(-100px);
+  border-radius: 40px;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  animation: float 5s linear infinite forwards;
+  /*Add animation(like pop up)*/
 }
 
 .chat__icon {
   font-size: 18px;
   transition: opacity 0.5s ease-in-out;
   /*transition can be use if icon is next of input*/
+  cursor: pointer;
 }
 
 .chat__write:focus ~ .chat__icon {
   opacity: 0;
 }
-/* chat__icon will hide when I use(focus) class chat__write.*/
+/* sibling selector : chat__icon will hide when I use(focus) class chat__write.*/
 
 .chat__write i {
   font-size: 22px;
@@ -84,10 +114,6 @@
   width: 100%;
   border: none;
   font-size: 15px;
-}
-
-.chat__write-column:last-child i {
-  padding: 0px 6px;
 }
 
 .chat__write-column i {
@@ -187,3 +213,34 @@
   border-top-right-radius: 0px;
   background-image: linear-gradient(to left, #be93c5, #7bc6cc);
 }
+
+@keyframes incommingAnim {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.incoming-message {
+  animation: incommingAnim 1s ease-out forwards;
+}
+
+@keyframes sentanim {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.sent-message {
+  animation: sentanim 1s ease-out forwards;
+}
+/*forward's mean is element(.sent-message) will keep values*/
