--- a/css/chat.css
+++ b/css/chat.css
@@ -154,10 +154,22 @@
   width: 80%;
 }
 
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateX(1turn);
+  }
+}
+
 .incoming-message img {
   width: 50px;
   border-radius: 15px;
   margin-right: 20px;
+  /*box-shadow: 0 30px 60px -100px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);*/
+  animation: spin 1s linear;
 }
 
 .incoming-message {
